name:                metrics-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mtesseract/metrics-test#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Schulte
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable metrics-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , metrics
                     , async